unifi-network-application: deploy

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -27,6 +27,10 @@ stringData:
     MEDIA_PAPERLESS_DB_PASSWORD: ENC[AES256_GCM,data:Ad3mV+5/93a130JP,iv:wfE5WMjgGeFbCK09UG0Zmr0B5OdbaNA782UdrbPnJ9k=,tag:fsF4IufGnQDwsV+apzWN4w==,type:str]
     MEDIA_PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:3wQ/Vzek3dF52wrDnCLiOA==,iv:N5NKno2c4p0Su0soTqkfr3TOz4yFQN00fllw0MUMAvY=,tag:i0wuWWsddPyITTuf6Vtl7A==,type:str]
     MEDIA_PAPERLESS_SMB_USERS: ENC[AES256_GCM,data:NPaTppQrwXvWMNKcAjLhvP1lXain8LdTD665EdVfsjHBKVs=,iv:GoI2GHHfYYCpVccCENPVf8c/e6kdm5xIf+j6rkySzGs=,tag:1cIVYeyydYVDeGy3soxa1A==,type:str]
+    #ENC[AES256_GCM,data:juiziOPL8sXl20I=,iv:fG9D6GGivjNjuOoDblbQsZhpxbBCqcOZtvbxJsHPn8g=,tag:jjLlI/DcojnZLsjGqCjhMA==,type:comment]
+    NETWORKING_UNIFI_MONGODB_USER: ENC[AES256_GCM,data:AXUYVg==,iv:hyI1tqUHCFpPCxsER09vFu0JQQ8+wavYge2X9BRJHTI=,tag:sQ/SQafVqfmCKrHrr/HJ5Q==,type:str]
+    NETWORKING_UNIFI_MONGODB_PASS: ENC[AES256_GCM,data:M4cadphM8gVNkWtUGvYSeg==,iv:svPHEb+MsA+1aCKHxFBR8m7ND5/sy4mbK1kHZGFwUu4=,tag:U9MMPXJpk0XSGE4CgPl7Sg==,type:str]
+    NETWORKING_UNIFI_MONGODB_DB: ENC[AES256_GCM,data:y0pZ790=,iv:eTOmaIjr3fuo+4fJUPvjKIEiK9Rkn15/P4T5q0A8dbo=,tag:TPTaOatTUqBrBGI3Pn2aIA==,type:str]
     #ENC[AES256_GCM,data:VNpRjE/d,iv:UdLSQY40OT0D2wzb7ghMZXXQBuwB3CcnfhiXqEzvQJs=,tag:u2Iz3ZW67L7bo+L+xLNyWQ==,type:comment]
     TOOLS_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:TgCTm7konV6Vu6Y=,iv:nn0qmL5f+H0jPKMca1SMIzuFuLQWHYUE49ygZreHtEE=,tag:Z1AWoRY5CXVzDaDjyUvB/w==,type:str]
     TOOLS_SHLINK_DB_ROOT_PASSWORD: ENC[AES256_GCM,data:t0u+wnViDOdFGTejYQ==,iv:R4Lggft0fXn2nw95qtUoyM6vY4IdaJUVhIBN3Lp6fgs=,tag:glerJJ0Kih3umic37D/PKg==,type:str]
@@ -49,8 +53,8 @@ sops:
             eEFSeGV3NHVBV0JXSnozbHpUaEtIbVUK6kmKX20QI1xvPOluAwA52XRqYrLB/k88
             wl6PHYbwI2EKrqXzWUtPkILBUORr1i+2NaFOO6cvnI5lWSMvnc/YNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-18T20:47:09Z"
-    mac: ENC[AES256_GCM,data:3A3PiAZ2yetvSgIXz6iBzmyvecD+rPYMdzZR9nxp6PhyI4nbr6UmCtS8fXMSf6PqWpZJ8HJXr08R3npCVeznEHBe8fkRl6eNK7EiwbqjIntIbfn/m1bit96jbs004zDGcfQWkE5jg4w3YboaOyxrLVpf9Jc1g4MXSgCCqMaj+pM=,iv:gqb1MIhyiq9wkIGCIFOhr3b4NiSDR/YHA3jai6Ee+yU=,tag:ukMd8mCiV10J8+xyMYEwKQ==,type:str]
+    lastmodified: "2025-04-23T23:19:04Z"
+    mac: ENC[AES256_GCM,data:aRv0D0sTyNZx/9yUsru5XADjfzei1oM1sbf71+F4k+Wfa9eqnnDrmGWa5VIy4eUjWPatzAnXXOxoxOlN26ibbLBI23NIexsKab2lkWe2qaPFWi+p8MI/kBX5qyASW2yFVnJ5E61St+68PYTIBR8Tw9QHsL7p0YCjcAntFWYJkeQ=,iv:SRs4ejiDVARwtg+c4k10SJJVaiCh6/C53OYxvWPGdrc=,tag:xLLkDSVplaSBRNb7YuFqxQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(Pass|pass|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.0
