--- a/cluster/apps/networking/unifi-network-application/kustomization.yaml
+++ b/cluster/apps/networking/unifi-network-application/kustomization.yaml
@@ -1,5 +1,7 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm
-  - oci
+  - helm-release.yaml
+  - hr-mongodb.yaml
+  - pvc-mongodb.yaml
