unifi: network application nginx proxy

--- a/cluster/apps/networking/unifi-network-application/helm-release.yaml
+++ b/cluster/apps/networking/unifi-network-application/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
               PGID: 1000
               MONGO_HOST: unifi-db-mongodb.networking.svc.cluster.local
               MONGO_PORT: 27017
-              MONGO_USER: root
+              MONGO_USER: ${NETWORKING_UNIFI_MONGODB_USER}
               MONGO_PASS: ${NETWORKING_UNIFI_MONGODB_PASS}
               MONGO_DBNAME: ${NETWORKING_UNIFI_MONGODB_DB}
               MONGO_AUTHSOURCE: admin
@@ -96,9 +96,14 @@ spec:
     ingress:
       main:
         enabled: true
-        className: "nginx-internal"
+        className: nginx-internal
         annotations:
-          hajimari.io/enable: "false"
+          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+          nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
+          hajimari.io/enable: "true"
+          hajimari.io/appName: "Unifi"
+          hajimari.io/info: "Unifi Dashboard"
+          hajimari.io/icon: "access-point-network"
         hosts:
           - host: &host unifi-dashboard.sparks.codes
             paths:
@@ -108,6 +113,6 @@ spec:
                   identifier: main
                   port: http
         tls:
-          - hosts:
+          - secretName: acme-crt-secret-sparks-codes
+            hosts:
               - *host
-            secretName: acme-crt-secret-sparks-codes
