nodes: add gpu-node-1

--- a/provision/ansible/inventory/clients.yaml
+++ b/provision/ansible/inventory/clients.yaml
@@ -42,6 +42,7 @@ all:
         sierra.sparks.codes:
         romeo.sparks.codes:
         xray.sparks.codes:
+        gpu-node-1.sparks.codes:
         # kappa.sparks.codes:
 
     # -------------------------------------------
