--- a/provision/ansible/playbooks/servers/nvidia/install-nvidia-tools.yaml
+++ b/provision/ansible/playbooks/servers/nvidia/install-nvidia-tools.yaml
@@ -2,12 +2,12 @@
 - hosts: servers
   become: true
   tasks:
-    - name: Add Nvidia Repo
-      shell: |
-        curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg \
-        && curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | \
-          sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | \
-          sudo tee /etc/apt/sources.list.d/nvidia-container-toolkit.list
+    # - name: Add Nvidia Repo
+    #   shell: |
+    #     curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg \
+    #     && curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | \
+    #       sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | \
+    #       sudo tee /etc/apt/sources.list.d/nvidia-container-toolkit.list
 
     - name: Install Packages
       apt:
