bambu: add filebrowser for 3d files

--- a/cluster/apps/tools/bambu-studio/helm-release.yaml
+++ b/cluster/apps/tools/bambu-studio/helm-release.yaml
@@ -50,7 +50,7 @@ spec:
           hajimari.io/icon: "printer-3d"
           hajimari.io/targetBlank: "true"
         hosts:
-          - host: &host bambustudio.sparks.codes
+          - host: &host bambu-studio.sparks.codes
             paths:
               - path: "/"
                 pathType: "Prefix"
