--- a/cluster/apps/kube-system/intel-gpu-plugin/helm-release.yaml
+++ b/cluster/apps/kube-system/intel-gpu-plugin/helm-release.yaml
@@ -1,35 +1,65 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: intel-gpu-plugin
+  name: intel-device-plugin-operator
   namespace: kube-system
 spec:
-  interval: 5m
+  interval: 30m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: intel-gpu-plugin
-      version: 4.4.2
+      chart: intel-device-plugins-operator
+      version: 0.32.0
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home-charts
+        name: intel-charts
         namespace: flux-system
-      interval: 5m
+  maxHistory: 3
+  install:
+    crds: CreateReplace
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    crds: CreateReplace
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
-    image:
-      repository: ghcr.io/k8s-at-home/intel-gpu-plugin
-      tag: v0.22.0
-      pullPolicy: IfNotPresent
-    args:
-      - -shared-dev-num
-      - "2"
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: feature.node.kubernetes.io/custom-intel-gpu
-                  operator: In
-                  values:
-                    - "true"
+    manager:
+      devices:
+        gpu: true
+
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: intel-device-plugin-gpu
+  namespace: kube-system
+spec:
+  interval: 15m
+  chart:
+    spec:
+      chart: intel-device-plugins-gpu
+      version: 0.32.0
+      sourceRef:
+        kind: HelmRepository
+        name: intel-charts
+        namespace: flux-system
+  maxHistory: 3
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
+  values:
+    name: intel-gpu-plugin
+    sharedDevNum: 2 # TODO: the higher the number, the less resrouce slices each client gets, consider setting this to 1
+    nodeFeatureRule: true
