--- a/cluster/apps/tools/bambu-studio/kustomization.yaml
+++ b/cluster/apps/tools/bambu-studio/kustomization.yaml
@@ -2,6 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-release.yaml
-  - hr-filebrowser.yaml
-  - configmap-filebrowser.yaml
+  - helm-release-bambu.yaml
