--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - games.yaml
   - gitlab.yaml
   - home.yaml
+  - kubevirt.yaml
   - media.yaml
   - metallb-system.yaml
   - monitoring.yaml
