--- a/cluster/core/networking/kustomization.yaml
+++ b/cluster/core/networking/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
   - cloudflare-ingress
   - external-dns
   - metallb
+  - multus
   # - nginx-ingress-external
   - nginx-ingress-internal
