--- a/cluster/apps/tools/bambu-studio/kustomization.yaml
+++ b/cluster/apps/tools/bambu-studio/kustomization.yaml
@@ -3,3 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release-bambu.yaml
+  - configmap-storage.yaml
+  - helm-release-storage.yaml
