--- a/cluster/core/networking/kustomization.yaml
+++ b/cluster/core/networking/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - cloudflare-ingress
   - external-dns
   - metallb
-  - multus
+  # - multus
   # - nginx-ingress-external
   - nginx-ingress-internal
