--- a/cluster/apps/home/frigate/configmap-frigate.yaml
+++ b/cluster/apps/home/frigate/configmap-frigate.yaml
@@ -6,16 +6,15 @@ metadata:
   namespace: home
 data:
   config.yml: |
-
-
     auth:
       enabled: false
 
     mqtt:
-      host: emqx-listeners.default.svc
-      topic_prefix: frigate
-      user: mqtt
-      password: '{FRIGATE_MQTT_PASSWORD}'
+      enabled: false
+      # host: emqx-listeners.default.svc
+      # topic_prefix: frigate
+      # user: mqtt
+      # password: '{FRIGATE_MQTT_PASSWORD}'
 
     database:
       path: /config/frigate.db
@@ -31,31 +30,34 @@ data:
       mode: continuous
 
     ffmpeg:
-      hwaccel_args: preset-intel-qsv-h264
+      hwaccel_args: auto
       output_args:
-        record: preset-record-generic-audio-aac
+        record: preset-record-generic
 
-    objects:
-      track:
-        - person
-        - dog
-        - cat
-      filters:
-        person:
-          min_area: 3000
-          max_area: 100000
-          threshold: 0.75
-        dog:
-          min_area: 1000
-          max_area: 10000
-          threshold: 0.75
-        cat:
-          min_area: 1000
-          max_area: 10000
-          threshold: 0.75
+    audio:
+      enabled: false
+
+    # objects:
+    #   track:
+    #     - person
+    #     - dog
+    #     - cat
+    #   filters:
+    #     person:
+    #       min_area: 3000
+    #       max_area: 100000
+    #       threshold: 0.75
+    #     dog:
+    #       min_area: 1000
+    #       max_area: 10000
+    #       threshold: 0.75
+    #     cat:
+    #       min_area: 1000
+    #       max_area: 10000
+    #       threshold: 0.75
 
     record:
-      enabled: true
+      enabled: false
       retain:
         days: 3
         mode: all
@@ -90,168 +92,44 @@ data:
 
     go2rtc:
       streams:
-        porch_detect:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@porch.home:554/cam/realmonitor?channel=1&subtype=1
-        porch_record:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@porch.home:554/cam/realmonitor?channel=1&subtype=0
-          - "ffmpeg:porch_record#audio=aac"
-        front_detect:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@front.home:554/cam/realmonitor?channel=1&subtype=1
-        front_record:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@front.home:554/cam/realmonitor?channel=1&subtype=0
-          - "ffmpeg:front_record#audio=aac"
-        driveway_detect:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@driveway.home:554/cam/realmonitor?channel=1&subtype=1
-        driveway_record:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@driveway.home:554/cam/realmonitor?channel=1&subtype=0
-          - "ffmpeg:driveway_record#audio=aac"
-        pool_detect:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@pool.home:554/cam/realmonitor?channel=1&subtype=1
-        pool_record:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@pool.home:554/cam/realmonitor?channel=1&subtype=0
-          - "ffmpeg:pool_record#audio=aac"
-        basement_detect:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@basement-cam.home:554/h264Preview_01_sub
-        basement_record:
-          - rtsp://view:{FRIGATE_RTSP_PASSWORD}@basement-cam.home:554/h264Preview_01_main
-        doorbell_detect:
-          - rtsp://admin:{FRIGATE_RTSP_PASSWORD}@doorbell.home:554/cam/realmonitor?channel=1&subtype=01&authbasic=64#backchannel=0
-        doorbell_record:
-          - rtsp://admin:{FRIGATE_RTSP_PASSWORD}@doorbell.home:554/cam/realmonitor?channel=1&subtype=0&authbasic=64#backchannel=0
-          - "ffmpeg:doorbell_record#audio=aac"
+        dome_camera_1_detect:
+          - rtsp://dome-camera-1.sparks.codes/ch0_0.h264
+        dome_camera_1_record:
+          - rtsp://dome-camera-1.sparks.codes/ch0_0.h264
+        server_room_detect:
+          - rtsp://dome-camera-2.sparks.codes/ch0_0.h264
+        server_room_record:
+          - rtsp://dome-camera-2.sparks.codes/ch0_0.h264
 
     cameras:
-      porch:
+      server_room:
         ffmpeg:
           inputs:
-            - path: rtsp://127.0.0.1:8554/porch_detect
+            - path: rtsp://127.0.0.1:8554/server_room_detect
               input_args: preset-rtsp-restream
               roles:
                 - detect
-            - path: rtsp://127.0.0.1:8554/porch_record
+            - path: rtsp://127.0.0.1:8554/server_room_record
               input_args: preset-rtsp-restream
               roles:
                 - record
         detect:
-          height: 480
-          width: 704
-          fps: 5
-        objects:
-          filters:
-            person:
-              min_area: 1500
-              max_area: 100000
-              threshold: 0.75
-              min_score: 0.60
-        live:
-          stream_name: porch_record
-
-      front:
-        ffmpeg:
-          inputs:
-            - path: rtsp://127.0.0.1:8554/front_detect
-              input_args: preset-rtsp-restream
-              roles:
-                - detect
-            - path: rtsp://127.0.0.1:8554/front_record
-              input_args: preset-rtsp-restream
-              roles:
-                - record
-        detect:
-          height: 480
-          width: 704
           fps: 5
         live:
-          stream_name: front_record
+          stream_name: server_room_record
 
-      driveway:
+      dome_camera_1:
         ffmpeg:
           inputs:
-            - path: rtsp://127.0.0.1:8554/driveway_detect
+            - path: rtsp://127.0.0.1:8554/dome_camera_1_detect
               input_args: preset-rtsp-restream
               roles:
                 - detect
-            - path: rtsp://127.0.0.1:8554/driveway_record
+            - path: rtsp://127.0.0.1:8554/dome_camera_1_record
               input_args: preset-rtsp-restream
               roles:
                 - record
         detect:
-          height: 480
-          width: 704
           fps: 5
         live:
-          stream_name: driveway_record
-
-      pool:
-        ffmpeg:
-          inputs:
-            - path: rtsp://127.0.0.1:8554/pool_detect
-              input_args: preset-rtsp-restream
-              roles:
-                - detect
-            - path: rtsp://127.0.0.1:8554/pool_record
-              input_args: preset-rtsp-restream
-              roles:
-                - record
-        detect:
-          height: 480
-          width: 704
-          fps: 5
-        objects:
-          filters:
-            person:
-              min_area: 1000
-              max_area: 100000
-              threshold: 0.75
-        live:
-          stream_name: pool_record
-
-      basement:
-        ffmpeg:
-          inputs:
-            - path: rtsp://127.0.0.1:8554/basement_detect
-              input_args: preset-rtsp-restream
-              roles:
-                - detect
-            - path: rtsp://127.0.0.1:8554/basement_record
-              input_args: preset-rtsp-restream
-              roles:
-                - record
-        detect:
-          height: 352
-          width: 640
-          fps: 4
-        motion:
-          mask:
-            - 0,352,151,352,153,242,0,243
-        objects:
-          filters:
-            person:
-              mask: 0,352,151,352,153,242,0,243
-        live:
-          stream_name: basement_record
-
-      doorbell:
-        ffmpeg:
-          inputs:
-            - path: rtsp://127.0.0.1:8554/doorbell_detect
-              input_args: preset-rtsp-restream
-              roles:
-                - detect
-            - path: rtsp://127.0.0.1:8554/doorbell_record
-              input_args: preset-rtsp-restream
-              roles:
-                - record
-        detect:
-          height: 576
-          width: 720
-          fps: 5
-        objects:
-          filters:
-            person:
-              min_area: 1500
-              max_area: 100000
-              threshold: 0.75
-              min_score: 0.60
-        live:
-          stream_name: doorbell_record
+          stream_name: dome_camera_1_record
