--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - intel-gpu-plugin
-  - k8s-dashboard
+  # - k8s-dashboard
   - node-feature-discovery
   - nvidia-device-plugin
   - reloader
