--- a/cluster/apps/home/frigate/configmap-frigate.yaml
+++ b/cluster/apps/home/frigate/configmap-frigate.yaml
@@ -181,7 +181,7 @@ data:
           host: http://dome-camera-2.sparks.codes
           port: 80
           autotracking:
-            enabled: true
+            enabled: false
             calibrate_on_startup: True
             # Optional: the mode to use for zooming in/out on objects during autotracking. (default: shown below)
             # Available options are: disabled, absolute, and relative
