--- a/cluster/apps/gitlab/ingress.yaml
+++ b/cluster/apps/gitlab/ingress.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -16,6 +17,30 @@ spec:
                 name: gitlab-webservice-default
                 port:
                   number: 8181
+  tls:
+    - hosts:
+        - *host
+      secretName: acme-crt-secret-iwrite-software
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: gitlab-registry-internal
+  namespace: gitlab
+spec:
+  ingressClassName: nginx-internal
+  rules:
+    - host: &host registry.iwrite.software
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: gitlab-registry
+                port:
+                  number: 5000
   tls:
     - hosts:
         - *host
