--- a/cluster/apps/media/jellyfin/kustomization.yaml
+++ b/cluster/apps/media/jellyfin/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
+  - ingress.yaml
   - pvc-config.yaml
   - pvc-media.yaml
