--- a/cluster/apps/gitlab/cronjobs/kustomization.yaml
+++ b/cluster/apps/gitlab/cronjobs/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cronjob-sync-flux-infra.yaml
+  - cronjob-sync-gasket-builder.yaml
   - secret.sops.yaml
