--- a/cluster/apps/gitlab/cronjobs/cronjob-sync-gasket-builder.yaml
+++ b/cluster/apps/gitlab/cronjobs/cronjob-sync-gasket-builder.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: sync-flux-infra
+  name: sync-gasket-builder
   namespace: gitlab
 spec:
   schedule: "0 3 * * 1,3,5" # Every 2 hours
