--- a/cluster/apps/gitlab/cronjobs/secret.sops.yaml
+++ b/cluster/apps/gitlab/cronjobs/secret.sops.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 stringData:
-    GITHUB_PAT: ENC[AES256_GCM,data:WwZS7S1XIW68o8tV2zJmq7PzoWKTcndJGt4=,iv:ht6+5xwkj3QB4PIDS2XJkmgVngo8ECLVb0/oOBGYFrY=,tag:ydJHoalfM+mG+Br0drap0A==,type:str]
+    GITLAB_PAT: ENC[AES256_GCM,data:3BdBEn9ISfz2sWzGNhc8tExpQTOqQbHOfJI=,iv:g1AZEChS/Xv5N3IXxCGQD6isAGXYHftCUo2B0sgeV3Y=,tag:hZ0qU5Qj5VyzuBMcPWDI/A==,type:str]
 kind: Secret
 metadata:
     name: gitlab-pat
@@ -16,7 +16,7 @@ sops:
             bzQvZXAzN2dzQVN4ZjhBSmJEWEVJblkKgaaU8qCDUck6OG2XmfjYtdtfhMCkxk+1
             xrg1EbB595TnY+ieXwodIuiL9AaqcjYav3sqelojXt9nLxQYS1pPog==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-24T18:09:14Z"
-    mac: ENC[AES256_GCM,data:1CGw2WvhhnsGkWSoo7V5s/8HPzJVCq3V98uFbIzavd0HOpd4neWJAMrIszXrWKYrNJteX/tAYTOKW9zuAB4jRbmXMgoAINcdufYI6eHxdjauoC0a/zCmv+EsZWN+vtv+2gWNzmof/wLP7U8YsS/LyyyNkgXQ5UOA8U/95gXwjJc=,iv:yr9U58itZ4B2xmVn7UwdE+Gcs5FdGe1H1XU+xgdWqnQ=,tag:zO8/SeK4PidvxGVxxVGKXQ==,type:str]
+    lastmodified: "2025-05-24T22:07:23Z"
+    mac: ENC[AES256_GCM,data:oZ7uZDF/G2tbdUNytDFvLEXUN5P3VsDO4IAJyWSe45/c9Z/Mt5At9x3wem6EGhecZpD4kqSnUZeRRPIgi2Z2BwzUkOkAMXAgHyrZyA0hUNmqi4kWtLObtw3hzt/iEHnuUYSdTOx00/ntovA7HFjonL9mOnW0gJtYDR3EeK/Dj0o=,iv:YLV4eB46rUTIksttvi2H7Bo5HGMqbHRxErU6exerZCk=,tag:xIvzXFaHB03OHOKy5W07dA==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
