--- a/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
+++ b/cluster/apps/media/ghost/helm-release-ghost-mariadb.yaml
@@ -12,7 +12,7 @@ spec:
       version: 20.5.6
       sourceRef:
         kind: HelmRepository
-        name: bitnami-charts
+        name: bitnami-charts-oci
         namespace: flux-system
       interval: 15m
   values:
