--- a/cluster/apps/media/paperless-ngx/helm-release-postgresql.yaml
+++ b/cluster/apps/media/paperless-ngx/helm-release-postgresql.yaml
@@ -12,7 +12,7 @@ spec:
       version: 15.5.38
       sourceRef:
         kind: HelmRepository
-        name: bitnami-charts
+        name: bitnami-charts-oci
         namespace: flux-system
       interval: 5m
   values:
