--- a/cluster/apps/nginx/redirect.media.sparks.codes/helm-release.yaml
+++ b/cluster/apps/nginx/redirect.media.sparks.codes/helm-release.yaml
@@ -13,7 +13,7 @@ spec:
       version: 20.0.3
       sourceRef:
         kind: HelmRepository
-        name: bitnami-charts
+        name: bitnami-charts-oci
         namespace: flux-system
       interval: 15m
   values:
