--- a/cluster/core/databases/influxdb/helm-release.yaml
+++ b/cluster/core/databases/influxdb/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
       version: 7.0.3
       sourceRef:
         kind: HelmRepository
-        name: bitnami-charts
+        name: bitnami-charts-oci
         namespace: flux-system
   install:
     createNamespace: true
