--- a/cluster/apps/home/frigate/configmap-frigate.yaml
+++ b/cluster/apps/home/frigate/configmap-frigate.yaml
@@ -118,6 +118,11 @@ data:
           - rtsp://dome-camera-2.sparks.codes/ch0_0.h264
         server_room:
           - rtsp://dome-camera-1.sparks.codes/ch0_0.h264
+        doorbell:
+          - "ffmpeg:http://doorbell.sparks.codes/flv?port=1935&app=bcs&stream=channel0_main.bcs&user={FRIGATE_CAMERA_DOORBELL_USER}&password={FRIGATE_CAMERA_DOORBELL_PASSWORD}#video=copy#audio=copy#audio=opus"
+          - rtsp://doorbell.sparks.codes/Preview_01_sub
+        doorbell_sub:
+          - "ffmpeg:http://doorbell.sparks.codes/flv?port=1935&app=bcs&stream=channel0_ext.bcs&user={FRIGATE_CAMERA_DOORBELL_USER}&password={FRIGATE_CAMERA_DOORBELL_PASSWORD}"
 
     cameras:
       server_room:
@@ -209,3 +214,15 @@ data:
             timeout: 10
             # Optional: Values generated automatically by a camera calibration. Do not modify these manually. (default: shown below)
             # movement_weights: []
+
+      doorbell:
+        ffmpeg:
+          inputs:
+            - path: rtsp://127.0.0.1:8554/doorbell
+              input_args: preset-rtsp-restream
+              roles:
+                - record
+            - path: rtsp://127.0.0.1:8554/doorbell_sub
+              input_args: preset-rtsp-restream
+              roles:
+                - detect
