--- a/cluster/apps/home/frigate/secret.sops.yaml
+++ b/cluster/apps/home/frigate/secret.sops.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 stringData:
     FRIGATE_MQTT_USER: ENC[AES256_GCM,data:H3UISD58FA==,iv:H3WGXtaVIzvOHXT7LxG6qDjQHHc3IRNYDtAUKJifNvU=,tag:/PPDuUCK7lT/2rhoOrLSaA==,type:str]
     FRIGATE_MQTT_PASSWORD: ENC[AES256_GCM,data:TpXRVPI6LH9JD6nMriG9,iv:VSJAvuWzU1VrCYHUdvhUiAiVqZvrjSDysp3PaiPf4iE=,tag:ciWPn8/gii8aDkG5YggaWQ==,type:str]
+    FRIGATE_CAMERA_DOORBELL_USER: ENC[AES256_GCM,data:fNNTwrFq,iv:aSdipZIapQfMocCIImx3+HJ+waY1+ibM4lCIyfu62uo=,tag:O09dj/JafpuzEwwF5qFggA==,type:str]
+    FRIGATE_CAMERA_DOORBELL_PASSWORD: ENC[AES256_GCM,data:5kTMwO1L8TPrwui/Va6X,iv:rbUxhDx+MNgDJY0c7VkDrUAVa7/booGAb6olhWNMQaQ=,tag:9R3r+i2fQ06SGh5QvJGviQ==,type:str]
 kind: Secret
 metadata:
     name: frigate-secret
@@ -17,7 +19,7 @@ sops:
             NlFzQXdwbTVkdzlqYWV1MXBZSmRqdWcKKyueXsHUP32fhtXBGuFB/buLRCMPPYOO
             epnhbfo7p1DeE6Dnfli3SG5H2IK7heR6n8LJvaaQ+t8s1lXxVNs6cA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-12T16:36:38Z"
-    mac: ENC[AES256_GCM,data:t2jkK6jB0ydy1D0G/7FeAGZcdVrSsuupN1Qoctwv0N44OgUgnspkQTCyOvuSMoKObvTyGl7tSZjFJvkKMfZUxtRQHess0+Al7UallZwh4C53DYtl5CvfdptS1WKfAXeAQH4z1/MXw80EbFvxyXaDQeoGdQ/LXznIfeBsMpd7vu0=,iv:x3o/TYlW7CGU7VHkcuGCE33G5yVHL/Svu9GWETPKS3M=,tag:zTEOWgfM8vP4oVLgI8St3g==,type:str]
+    lastmodified: "2025-05-28T20:39:14Z"
+    mac: ENC[AES256_GCM,data:w982P+WIGOeaJA+q680U/ycOWI7zdPYCQ3+chUjBKToeF3x3KZpp3HWV2Arf8N/wtPM9E6jcFVWNxDk4xJYNPY5e250zj0KFUZ340kXuY632SpBQkO8+hiAx/+HDp3L+poGnF1fvLD5TpGCCuUCs5Ex6R68vRhW8/TlbV6vPr4w=,iv:K6+oDRDqW4IpDonsqetWRI6SHS+Deg5JYlk2bLvtVoU=,tag:DPIt6+OBhZXROoaaUYTD3Q==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
