--- a/cluster/apps/games/minecraft/cwh11-archive/helm-release.yaml
+++ b/cluster/apps/games/minecraft/cwh11-archive/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
       repository: itzg/minecraft-server
       tag: latest
     nodeSelector:
-      services/minecraft: active
+      services/minecraft: true
     resources:
       requests:
         memory: 6144Mi
