--- a/cluster/apps/games/minecraft/bluemap-renderdata-pvc.yaml
+++ b/cluster/apps/games/minecraft/bluemap-renderdata-pvc.yaml
@@ -10,7 +10,7 @@ spec:
     storage: 100Gi
   persistentVolumeReclaimPolicy: Retain
   local:
-    path: /mnt/static/mc.sparks.codes/bluemap-renderdata
+    path: /mnt/local/mc.sparks.codes/bluemap-renderdata
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -18,7 +18,7 @@ spec:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - omega
+                - lambda
 
 ---
 apiVersion: v1
