--- a/cluster/apps/media/filegator/helm-release.yaml
+++ b/cluster/apps/media/filegator/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: filebrowser
+  name: filegator
   namespace: media
 spec:
   interval: 15m
@@ -18,45 +18,19 @@ spec:
   values:
     controllers:
       main:
-        pod:
-          securityContext:
-            runAsUser: 2000
-            runAsGroup: 2000
-            fsGroup: 2000
-            fsGroupChangePolicy: OnRootMismatch
-            supplementalGroups: [10000]
         containers:
           main:
             image:
-              repository: filebrowser/filebrowser
-              tag: v2.32.0
+              repository: filegator/filegator
+              tag: v7.13.0-multiarch
             env:
               TZ: "America/Chicago"
-              FB_DATABASE: /config/filebrowser.db
-              FB_ROOT: /data
-              FB_LOG: stdout
-              FB_PORT: &port 80
-            probes:
-              startup:
-                enabled: false
-              liveness: &probes
-                enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /health
-                    port: *port
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
     service:
       main:
         controller: main
         ports:
           http:
-            port: *port
+            port: 8080
     ingress:
       main:
         enabled: true
@@ -84,13 +58,22 @@ spec:
     persistence:
       config:
         enabled: true
-        type: persistentVolumeClaim
-        accessMode: ReadWriteMany
-        storageClass: ceph-filesystem
-        size: 8Gi
-        retain: true
-        globalMounts:
-          - path: /config
+        type: configMap
+        name: filegator-config
+        advancedMounts:
+          main:
+            main:
+              - path: /var/www/filegator/configuration.php
+                subPath: config.php
+      users:
+        enabled: true
+        type: configMap
+        name: filegator-users
+        advancedMounts:
+          main:
+            main:
+              - path: /var/www/filegator/private/users.json
+                subPath: users.json
       data:
         enabled: true
         type: persistentVolumeClaim
@@ -99,4 +82,13 @@ spec:
         size: 175Gi
         retain: true
         globalMounts:
-          - path: /data
+          - path: /var/www/filegator/repository
+      logs:
+        enabled: true
+        type: persistentVolumeClaim
+        accessMode: ReadWriteMany
+        storageClass: ceph-filesystem
+        size: 8Gi
+        retain: true
+        globalMounts:
+          - path: /private/logs
