--- a/cluster/apps/media/filegator/kustomization.yaml
+++ b/cluster/apps/media/filegator/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - configmap.yaml
+  - configmap-config.yaml
+  - configmap-users.yaml
   - ingress.yaml
   # - external-name.yaml
