--- a/cluster/apps/games/minecraft/cwh11-broville/helm-release.yaml
+++ b/cluster/apps/games/minecraft/cwh11-broville/helm-release.yaml
@@ -21,7 +21,7 @@ spec:
       repository: itzg/minecraft-server
       tag: latest
     nodeSelector:
-      services/minecraft: true
+      services/minecraft: "true"
     resources:
       requests:
         memory: 6144Mi
@@ -42,7 +42,7 @@ spec:
       onlineMode: false
       memory: 6144M
       serviceType: LoadBalancer
-      loadBalancerIP: 10.10.202.3
+      loadBalancerIP: 10.10.202.4
       rcon:
         enabled: true
         password: ${GAMES_MINECRAFT_BUNGEECORD_RCON_PASSWORD}
