--- a/cluster/apps/games/minecraft/cwh11-rex/pvc.yaml
+++ b/cluster/apps/games/minecraft/cwh11-rex/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: local-mc-cwh11
+  name: local-mc-cwh11-rex
 spec:
   accessModes:
     - ReadWriteMany
@@ -24,10 +24,10 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: local-mc-cwh11
+  name: local-mc-cwh11-rex
   namespace: games
 spec:
-  volumeName: local-mc-cwh11
+  volumeName: local-mc-cwh11-rex
   accessModes:
     - ReadWriteMany
   storageClassName: ""
