minecraft: enable all servers

--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - velocity-proxy
   # - bungeecord
   - cwh11-rex
-  # - cwh11-archive
+  - cwh11-archive
   - cwh11-original
   # - cwh11-broville
   - superdigdug
