--- a/cluster/apps/media/copyparty/ingress.yaml
+++ b/cluster/apps/media/copyparty/ingress.yaml
@@ -13,9 +13,9 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: filegator
+                name: copyparty
                 port:
-                  number: 8080
+                  number: 8086
   tls:
     - hosts:
         - *host
