frigate: add semantic search and facial recognition

--- a/cluster/apps/home/frigate/configmap-frigate.yaml
+++ b/cluster/apps/home/frigate/configmap-frigate.yaml
@@ -92,8 +92,11 @@ data:
       retain:
         default: 7
 
+    face_recognition:
+      enabled: true
+
     semantic_search:
-      enabled: false
+      enabled: true
 
     genai:
       enabled: true
